[package]
name = "ros"
version = "0.1.0"
authors = ["AlohaYo <Garfield.bupt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[target.'cfg(target_os = "none")']
runner = "bootimage runner"

[dependencies]
bootloader = "0.9.11"